- [#577] 10 new colors added for the lines
- [#570] Tiled PDF : Margin values correctly taken into account
- [#580] Extend the list of heights.
- [#582] Issue with standard path to shared data on Linux.
- [#595] GapWidth affecting to the margins.
- [#589] Valentina lock up if not enough space for label.
- [#606] Mac OS X. Can’t type in measurements due to digit count limitation.

# Version 0.4.6
- [#594] Broken export on Mac.
- Math parser allows apostrophe in variable name.
- [#603] Wrong layout caused by wrong seam allowance.
- [#604] Seams allowances gets "weird" and turns inward when changing measurment file.

# Version 0.4.5 October 15, 2016
- [#435] Valentina doesn't change the cursor.
- [#473] Tape 'Preferences' cause loss of focus.
- [#485] Error when drawing a curved path.
- [#491] Valentina doesn't update fractional separator.
- [#492] Valentina crashes when add an increment.
- [#493] Error in seam allowance drawing.
- [#468] Error - Tape 'Save As' should set 'Read Only' to false.
- [#501] Rename Window->Close Window to Window->Close pattern.
- [#515] Seam allowance wrong way.
- [#494] Printing is not working.
- [#516] Valentina crashes when use "Point intersect line and axis" instrument.
- [#483] File lost.
- Fixed Bisector tool bug. The tool created internal variable for wrong segment.  
- [#526] Dialog Detail is not on top after selection second object on Mac.
- [#532] Unexpected error occurs when zoom out image.
- [#537] Valentina crashes when use undo command.
- [#544] Error: Color Lines are black until touched.
- [#543] Detail loses details.
- [#548] Bug Detail tool. Case when seam allowance is wrong.
- Called the main app in console mode doesn't show opening file error in some cases.
- [#553] Tape.exe crash. Issue with the Search field.
- [#569] Tape app. Options that open new file open new instance even if a user doesn't want this.
- [#539] Infinite alert loop "Gradation doesn't support inches" when loading standard table.