@@ -69,7 +69,10 @@ DialogAboutApp::DialogAboutApp(QWidget *parent) :
         }
     });
 
-    connect(ui->pushButtonCheckUpdate, &QPushButton::clicked, [](){
+    connect(ui->pushButtonCheckUpdate, &QPushButton::clicked, []()
+    {
+        // Set feed URL before doing anything else
+        FvUpdater::sharedUpdater()->SetFeedURL(defaultFeedURL);
         FvUpdater::sharedUpdater()->CheckForUpdatesNotSilent();
     });
 
